fix(colors): replace old white with dragon grey in reverse video
Changed dragonWhite from #c5c9c5 to #a6a69c (dragon grey) in Helix theme
to ensure consistent zen aesthetic when text appears on colored backgrounds.
Also updated NEWT template references for consistency.

This ensures reverse video (like in git diffs and lazygit) shows the
softer dragon grey instead of bright white, maintaining visual harmony.

--- a/home/dot_config/helix/themes/kanagawa-dragon.toml
+++ b/home/dot_config/helix/themes/kanagawa-dragon.toml
@@ -150,7 +150,7 @@ dragonBlack4 = "#282727"
 dragonBlack5 = "#393836"
 dragonBlack6 = "#625e5a"  # Comment
 
-dragonWhite = "#c5c9c5"   # Foreground
+dragonWhite = "#a6a69c"   # Foreground (dragon grey)
 dragonWhite2 = "#C8C093"   # Terminal White
 
 dragonGreen = "#87a987"    # Terminal Bright Green
