feat(niri): implement ergonomic window management with semantic keybindings
- Binary width toggle: MOD+W switches between 50% and 100% column width
- PrtSc as additional MOD key via keyd for right-hand ergonomics
- Semantic keybinding layout:
  - MOD+T: Toggle tabbed display (T for Tabs)
  - MOD+F: Fullscreen
  - MOD+SHIFT+F: Toggle floating (modified F)
  - MOD+TAB/SHIFT+TAB: Workspace navigation (universal convention)
- Screenshot bindings: MOD+SHIFT/CTRL/ALT+S (since PrtSc is now MOD)
- keyd service configuration for kernel-level key remapping

Replaces incremental resize (±10%) with instant 50%/100% toggle matching actual usage patterns.

--- a/home/.chezmoidata/keybindings.yaml
+++ b/home/.chezmoidata/keybindings.yaml
@@ -69,8 +69,8 @@ keybindings:
     # Transformation - Toggle states/modes
     transform:
       fullscreen: "f"        # Toggle fullscreen
-      floating: "t"          # Toggle floating/tiled
-      tabbed: "w"            # Toggle window/tab mode (w for window)
+      floating: "SHIFT+f"    # Toggle floating/tiled (modified F)
+      tabbed: "t"            # Toggle tabbed display mode - T for tabs!
 
       # Modal transformations (editor/shell)
       mode_normal: "ESC"     # Return to normal mode
