--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -6,3 +6,4 @@ packages:
   cachyos:
     pacman:
       - npm  # Node.js package manager (nodejs is a dependency)
+      - bitwarden-cli  # Password manager CLI for secure secret management
