feat(vpn): add secure OpenVPN integration with isolated secrets
Implement comprehensive VPN configuration with Bitwarden authentication and
secure secrets architecture to work around Claude Code's broken deny permissions.

- Add OpenVPN to declarative package management
- Create bitwarden-username.tmpl for credential extraction
- Configure OpenVPN with Goose VPN server and auth-nocache
- Implement Fish functions for VPN management (vpc, vpd, vps)
- Create systemd user service for automatic connection
- Restructure secrets to ~/.local/state/secrets/ outside projects
- Add Fish auto-loading for secrets as environment variables
- Update Claude managed settings deny list (despite being broken)
- Document secure secrets architecture in CLAUDE.md

Security improvements:
- Secrets isolated from project directories and Git repos
- Auth file uses 600 permissions with private_ prefix
- Credentials only exist when Bitwarden is unlocked
- Environment variables auto-loaded for script access

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -7,3 +7,4 @@ packages:
     pacman:
       - npm  # Node.js package manager (nodejs is a dependency)
       - bitwarden-cli  # Password manager CLI for secure secret management
+      - openvpn  # Secure tunneling daemon for VPN connections
