feat(transmission): add VPN-bound BitTorrent client with killswitch
- Configure transmission-daemon with strict VPN binding (bind-address-ipv4)
- Implement killswitch: transmission stops if VPN disconnects
- Security hardened: required encryption, minimal seeding (10KB/s, 0.1 ratio)
- Privacy features: no DHT/PEX/LPD, random ports, blocklist enabled
- Add Fish functions: tstart, tstop, tstatus, tadd, tlist, tremove, tui
- Configure tremc TUI with Kanagawa theme and vi keybindings
- Create desktop entry for Wofi launcher integration
- Downloads configured to ~/Videos with incomplete subdirectory
- Dynamic VPN IP binding via transmission-vpn-bind script

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -8,3 +8,5 @@ packages:
       - npm  # Node.js package manager (nodejs is a dependency)
       - bitwarden-cli  # Password manager CLI for secure secret management
       - openvpn  # Secure tunneling daemon for VPN connections
+      - transmission-cli  # BitTorrent client with daemon for VPN-bound torrenting
+      - tremc  # Terminal UI for transmission with vi-like keybindings
