feat(mpv): add media player with dual file browsers and advanced subtitles
- Add mpv and lf packages for media playback and file browsing
- Configure mpv with Kanagawa Dragon theme throughout (OSD, subtitles, browser)
- Implement Helix-native vi keybindings (hjkl, ge for end)
- Add dual file browser support:
  - Built-in mpv-file-browser plugin (press 'b' during playback)
  - LF terminal browser integration (launch without arguments)
- Configure automatic subtitle detection with fuzzy matching:
  - Search multiple directories (., subs/, parent dirs)
  - 90% similarity threshold for misnamed files
  - Dual subtitle display capability
  - Full timing, position, and style controls
- Add Fish semantic functions:
  - mp: play media with optional browsing
  - mpb: force browse mode
  - mps: show watch history status
  - mpc: clear history and positions
  - mpsub: subtitle management tool (find/organize/rename/check)
- Enable resume playback and watch history tracking
- Configure screenshots to ~/Pictures/mpv/
- Add run-once script to install mpv-file-browser plugin
- Document comprehensive subtitle keybindings and features

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -10,3 +10,6 @@ packages:
       - openvpn  # Secure tunneling daemon for VPN connections
       - transmission-cli  # BitTorrent client with daemon for VPN-bound torrenting
       - tremc  # Terminal UI for transmission with vi-like keybindings
+      - mpv  # Media player with resume, history, and file browser support
+      - mpv-mpris  # MPRIS integration for mpv (media controls)
+      - lf  # Terminal file manager for video browsing (already installed)
