--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -14,3 +14,20 @@ packages:
       - mpv-mpris  # MPRIS integration for mpv (media controls)
       - lf  # Terminal file manager for video browsing (already installed)
       - weechat  # Modern IRC client with better vi-mode and extensibility
+      # LF preview and functionality tools
+      - bat  # Syntax-highlighted text previews with git integration
+      - chafa  # Convert images to terminal graphics (sixel/symbols)
+      - mediainfo  # Display media file technical information
+      - atool  # Universal archive extraction and listing tool
+      - poppler  # PDF rendering library with utilities
+      - jq  # Command-line JSON processor for pretty-printing
+      - trash-cli  # Command line interface to FreeDesktop.org trash
+      - dragon  # KDE drag-and-drop utility for X or Wayland
+      - xclip  # Command line clipboard for X11
+      - wl-clipboard  # Wayland clipboard utilities
+      - tree  # Directory tree visualization for folder previews
+      - nsxiv  # Simple X image viewer for viewing from lf
+      - p7zip  # 7-zip archive support (provides 7z command)
+      - zathura  # Lightweight PDF/document viewer
+      - zathura-pdf-poppler  # PDF support for zathura
+      - imagemagick  # Image manipulation tools (identify, convert)
