feat(lf): integrate handlr for modern file handling with wofi selector
Replace legacy xdg-open with handlr throughout lf file manager for better
Wayland support and user choice. Simplifies file actions to semantic two-key
system: 'l' for default app (instant), 'L' for wofi selector (choice).

- Add handlr configuration with wofi dmenu selector
- Create setup script for comprehensive file associations
- Simplify lf keybindings to align with semantic intentions
- Add imv, satty, and gimp for image handling options
- Set EDITOR/VISUAL environment variables globally
- Include zathura desktop entry for PDF handling
- Update documentation to reflect handlr integration

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -30,4 +30,8 @@ packages:
       - p7zip  # 7-zip archive support (provides 7z command)
       - zathura  # Lightweight PDF/document viewer
       - zathura-pdf-poppler  # PDF support for zathura
-      - imagemagick  # Image manipulation tools (identify, convert)
+      # File handling and viewing tools
+      - handlr  # Modern file handler replacing xdg-open with better defaults
+      - imv  # Wayland-native image viewer with better performance
+      - satty  # Screenshot annotation tool for quick image edits
+      - gimp  # Full-featured image editor for advanced editing
