feat(audio): integrate Wiremix TUI mixer with Kanagawa theme and vi navigation
Replace pavucontrol with Wiremix, a modern PipeWire-native TUI audio mixer
that aligns with our Helix-native keybinding philosophy and Kanagawa theming.

- Add Wiremix configuration with full Kanagawa Dragon color palette
- Implement Helix-native vi keybindings (hjkl, ge for end)
- Create Fish helper functions: vol, volu, vold, volm, vols
- Update Waybar to launch Wiremix instead of pavucontrol
- Add Wiremix to declarative package manifest
- Document Wiremix integration in CLAUDE.md

The integration provides a consistent, keyboard-driven audio control
experience that matches the aesthetic and interaction patterns of the
rest of the dotfiles ecosystem.

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -35,3 +35,5 @@ packages:
       - imv  # Wayland-native image viewer with better performance
       - satty  # Screenshot annotation tool for quick image edits
       - gimp  # Full-featured image editor for advanced editing
+      # Audio control
+      - wiremix  # Modern TUI audio mixer for PipeWire with vi keybindings
