feat(packages): declare missing lf dependencies (fzf, ripgrep)
Add fzf and ripgrep to packages.yaml as they are already used by lf's
keybindings (Ctrl+f for fuzzy directory jump, Ctrl+g for content search)
but were not explicitly declared as dependencies.

These tools have been available on the system but should be managed
through our declarative package manifest for completeness and
reproducibility.

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -13,6 +13,8 @@ packages:
       - lf  # Terminal file manager for video browsing (already installed)
       - weechat  # Modern IRC client with better vi-mode and extensibility
       # LF preview and functionality tools
+      - fzf  # Fuzzy finder for directory jumping (required by lf Ctrl+f)
+      - ripgrep  # Fast content search tool (required by lf Ctrl+g)
       - bat  # Syntax-highlighted text previews with git integration
       - chafa  # Convert images to terminal graphics (sixel/symbols)
       - mediainfo  # Display media file technical information
