feat(shell): add eza ls wrapper and zoxide navigation
Enhance shell productivity with modern tools:

- Add transparent ls→eza wrapper via Fish function
  - Provides icons, colors, and git-aware listings
  - Zero learning curve: all ls options pass through unchanged
  - Groups directories first automatically

- Add zoxide for smart directory navigation
  - Frecency-based jumping with 'z' command
  - Complements visual navigation (lfcd) with pattern-based jumps
  - Auto-initializes in Fish config after vi bindings

- Add zoxide package to declarative manifest

Both tools integrate seamlessly without disrupting existing workflows.

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -34,3 +34,5 @@ packages:
       - gimp  # Full-featured image editor for advanced editing
       # Audio control
       - wiremix  # Modern TUI audio mixer for PipeWire with vi keybindings
+      # Shell enhancements
+      - zoxide  # Smart directory navigation with frecency-based jumping
