feat(dev): add github-cli and lazygit to dotfiles
Declare both tools in packages.yaml for reproducible environments.
Lazygit config already tracked with reverse video philosophy.

Integration:
- Package manifest: github-cli and lazygit under "Development tools"
- Fish abbreviation: 'lg' → lazygit (semantic: git-visual)
- Documentation: Usage patterns and authentication philosophy

Philosophy:
- lazygit: Manage config (custom theme with reverse video)
- github-cli: Skip config (users run 'gh auth login' per-machine)

This completes the development tools foundation for the dotfiles,
providing both GitHub integration (gh) and visual git management (lazygit)
with consistent theming and keybindings.

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -36,3 +36,6 @@ packages:
       - wiremix  # Modern TUI audio mixer for PipeWire with vi keybindings
       # Shell enhancements
       - zoxide  # Smart directory navigation with frecency-based jumping
+      # Development tools
+      - github-cli  # GitHub CLI for PR/issue/repo management
+      - lazygit  # TUI for git with vi keybindings and reverse video selections
