--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -39,3 +39,4 @@ packages:
       # Development tools
       - github-cli  # GitHub CLI for PR/issue/repo management
       - lazygit  # TUI for git with vi keybindings and reverse video selections
+      - qutebrowser  # Keyboard-driven web browser with vim-like navigation
