--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -36,6 +36,8 @@ packages:
       - wiremix  # Modern TUI audio mixer for PipeWire with vi keybindings
       # Shell enhancements
       - zoxide  # Smart directory navigation with frecency-based jumping
+      # Color tools
+      - python-colour  # Perceptually-uniform color interpolation for spectrum generation
       # Development tools
       - github-cli  # GitHub CLI for PR/issue/repo management
       - lazygit  # TUI for git with vi keybindings and reverse video selections
