feat(colors): eliminate hardcoded colors and complete spectrum docs
Completes the spectrum color system implementation:

Colors:
- Add green_bright (#98a88f) to palette for hover emphasis
- Replace last 2 hardcoded hex colors in waybar hover states
- Zero hardcoded colors remain in waybar (verified)

Documentation:
- Update semantic-color-architecture.md status (spectrum implemented)
- Add Spectrum Color System section to CLAUDE.md
- Document architecture, usage patterns, and benefits
- Link to complete architecture documentation

Result: Waybar fully migrated to palette-based + algorithmic colors.
All aesthetic progressions now use LAB-interpolated spectrums.
Foundation set for Phase 5+ (semantic color migration).

--- a/home/.chezmoidata/colors.yaml
+++ b/home/.chezmoidata/colors.yaml
@@ -51,6 +51,7 @@ kanagawa:
     aqua: "7aa89f"           # waveAqua
     teal: "6a9589"           # dragonTeal
     gold: "a292a3"           # dragonGold (same as magenta)
+    green_bright: "98a88f"   # brighter green for hover text emphasis
     gray: "9c9c9c"           # dragonGray
     gray2: "7a8382"          # dragonGray2
     gray3: "4c4c4c"          # dragonGray3
