--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -40,6 +40,7 @@ packages:
       - python-colour  # Perceptually-uniform color interpolation for spectrum generation
       # Development tools
       - npm  # Node package manager (provides npx for MCP servers)
+      - uv  # Astral's fast Python package manager (provides uvx for MCP servers)
       - github-cli  # GitHub CLI for PR/issue/repo management
       - lazygit  # TUI for git with vi keybindings and reverse video selections
       - qutebrowser  # Keyboard-driven web browser with vim-like navigation
