feat(zfs): add time machine with automated snapshots
Implement comprehensive ZFS snapshot automation system transforming
storage into a time machine with year-long retention and data
integrity guarantees.

**Implementation:**
- Layered snapshot retention: 15min → hourly → daily → weekly → monthly
- Automated monthly scrubs for silent corruption detection
- Dataset-specific exclusions (varcache, varlog ephemeral data)
- AUR package support in installer (zfs-auto-snapshot)

**User Interface:**
- zsnap: Create manual snapshots with semantic names
- zlist: View snapshot timeline (all or by dataset)
- zclean: Interactive cleanup of old auto-snapshots
- zfsstatus: Pool health summary with scrub status

**Time Travel:**
- Access any snapshot via /.zfs/snapshot/ (read-only)
- Selective file restoration without full rollback
- Compare current vs snapshot states
- Writable clones for testing

**Benefits:**
- 15-minute granularity for recent changes
- Year-long monthly snapshot retention
- Instant, zero-cost snapshot creation (copy-on-write)
- Automated integrity verification (monthly scrubs)
- Transparent functions show exact commands
- Interactive confirmations for destructive operations

**Documentation:**
- Complete system guide: docs/ai-context/systems/zfs.md
- AI quick reference in CLAUDE.md
- User guide with examples in README.md
- Recovery procedures and advanced capabilities

Files:
- docs/ai-context/systems/zfs.md (new)
- home/.chezmoidata/packages.yaml (zfs packages + AUR)
- home/dot_config/fish/functions/z{snap,list,clean,fsstatus}.fish.tmpl (new)
- home/run_once_setup-zfs-automation.sh.tmpl (timers)
- home/run_once_configure-zfs-snapshots.sh.tmpl (exclusions)
- home/run_onchange_install-packages.sh.tmpl (AUR support)
- CLAUDE.md (ZFS quick ref + systems section)
- README.md (user guide with examples)

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -11,6 +11,8 @@ packages:
       # System & Security - Foundation for secure operations
       - bitwarden-cli  # Password manager CLI for secure secret management
       - openvpn  # Secure tunneling daemon for VPN connections
+      - zfs-meta  # Metapackage for pre-compiled ZFS (provides "zfs" virtual package)
+      - zfs-utils  # ZFS filesystem utilities and command-line tools
 
       # Torrenting - VPN-bound downloading
       - transmission-cli  # BitTorrent client with daemon and VPN killswitch
@@ -66,3 +68,7 @@ packages:
       - github-cli  # GitHub CLI for PR/issue/repo management
       - lazygit  # TUI for git with vi keybindings and reverse video selections
       - python-colour  # Perceptually-uniform color interpolation for spectrum generation
+
+    aur:
+      # System & Security - Foundation for secure operations
+      - zfs-auto-snapshot  # Automated ZFS snapshots for time-machine backups
