feat(helix): integrate with semantic colors and soft wrap
Implement comprehensive Helix editor integration following architectural
principles and YAGNI philosophy:

Architecture:
- Convert theme to semantic color templates (colors.yaml single source)
- Convert config to template for future extensibility
- Separate languages.toml for file-type specific settings
- Preserve Helix-native keybindings (only 3 custom: space.w/q, X)

Features:
- Soft line wrapping with visual indicators (↪) for readability
- Enhanced LSP: snippets, auto-signature-help, inlay hints
- Smart search: smart-case, wrap-around
- Auto-pairs including <> for HTML/XML/Rust
- File-type overrides: markdown, python, rust, go, toml, yaml, json

Integration:
- Add helix to packages.yaml (Development & Build Tools)
- Create 'h' Fish abbreviation (semantic: invoke.editor)
- Template config, languages, and theme for semantic color compliance

Documentation:
- Add docs/ai-context/apps/helix.md with complete feature reference
- Update CLAUDE.md application configurations section
- Update docs/ai-context/critical-files.md with Helix paths

Benefits: Architectural compliance, maintainability through templates,
enhanced readability via soft wrap, Helix-native muscle memory preserved.

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -62,6 +62,7 @@ packages:
       - qutebrowser  # Web browser with vim-like navigation and semantic keybindings
 
       # Development & Build Tools - Programming languages and workflows
+      - helix  # Modal editor with semantic navigation and LSP integration
       - npm  # Node package manager (provides npx for MCP servers)
       - uv  # Astral's fast Python package manager (provides uvx for MCP servers)
       - dart  # Dart SDK for Flutter development and mobile apps
