--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -70,6 +70,9 @@ packages:
       - lazygit  # TUI for git with vi keybindings and reverse video selections
       - python-colour  # Perceptually-uniform color interpolation for spectrum generation
 
+      # Contemplation & Wisdom - Daily doses of zen philosophy
+      - fortune-mod  # Displays random quotations for contemplative terminal sessions
+
     aur:
       # System & Security - Foundation for secure operations
       - zfs-auto-snapshot  # Automated ZFS snapshots for time-machine backups
